--- a/index.html
+++ b/index.html
@@ -86,17 +86,17 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">Flatfy</a>
+				<a class="navbar-brand" href="#home">亞大</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
-					<li class="menuItem"><a href="#useit">Use It</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
-					<li class="menuItem"><a href="#contact">Contact</a></li>
+					<li class="menuItem"><a href="#whatis">無人機的規定</a></li>
+					<li class="menuItem"><a href="#useit">學科考試</a></li>
+					<li class="menuItem"><a href="#screen">術科考試</a></li>
+					<li class="menuItem"><a href="#credits">考場資訊</a></li>
+					<li class="menuItem"><a href="#contact">聯絡資訊</a></li>
 				</ul>
 			</div>
 		   
