--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/browser.svg" alt="Generic placeholder image">
 				   <h3>強制投保？</h3>
-				 <p class="lead">相關風險應以自我管理為主，故不強制投保責任保險，惟基於自身及他人風險考量，建議操作人主動投保。 </p>
+				 <p class="lead">相關風險應以自我管理為主，故不強制投保責任保險，惟基於自身及他人風險考量，建議操作人主動投保。 
+				 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
@@ -178,13 +179,10 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Full Responsive</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+                    <h3 class="section-heading">學科考試</h3>
+					<div class="sub-title lead3">民航法、管理規則</div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						無人機應註冊(具有射頻識別);操作人員應持有操作證。無人 機之設計、製造、改裝應申請檢驗。認可外國人持有外國政府 之證明文件。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
