--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                      <div id="owl-demo-1" class="owl-carousel">
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="drone1.png" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
