--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="drone2.png" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="drone3.png" alt="">
 							</div>
 						</a>
 					</div>       
