--- a/index.html
+++ b/index.html
@@ -201,17 +201,17 @@
                      <div id="owl-demo-1" class="owl-carousel">
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="drone1.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone1.png" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="drone2.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone2.png" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="drone3.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone3.png" alt="">
 							</div>
 						</a>
 					</div>       
