--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="intro-header">
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">檔車介紹</h1>
-			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">如何參加學科和術科測驗</h3>
+			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">認識檔車！</h3>
 			<ul class="list-inline intro-social-buttons">
 				<li><a href="https://twitter.com/galantiandrea" class="btn  btn-lg mybutton_cyano wow fadeIn" data-wow-delay="0.8s"><span class="network-name">Twitter</span></a>
 				</li>
@@ -71,7 +71,7 @@
         <!-- /.container -->
 		<div class="col-xs-12 text-center abcen wow fadeIn">
 			<div class="button_down "> 
-				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#whatis"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+				<a class="circle wow bounceInUp" data-wow-duration="1.5s"  href="#whatis"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
 			</div>
 		</div>
     </div>
@@ -86,13 +86,13 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#home">亞大</a>
+				<a class="navbar-brand" href="#home">首頁</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">無人機的規定</a></li>
+					<li class="menuItem"><a href="#whatis">檔車類型與規定</a></li>
 					<li class="menuItem"><a href="#useit">學科考試</a></li>
 					<li class="menuItem"><a href="#screen">術科考試</a></li>
 					<li class="menuItem"><a href="#credits">考場資訊</a></li>
@@ -108,7 +108,7 @@
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>無人機的規定</h2>
+				<h2>檔車類型與規定</h2>
 				<p class="lead" style="margin-top:0">一般民眾常見問題</p>
 				
 			</div>
