--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="row">
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <i class="fas fa-motorcycle"></i> alt="Generic placeholder image">
+				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
 				  <h3>需要註冊？</h3>
 				  <p class="lead">一般民眾所有的最大起飛重量 250g以上無人機應使用一般民眾憑證或健保卡辦理線上註冊。 </p>
 
