--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
-				  <h3>需要註冊？</h3>
+				  <h3>牌照區別？</h3>
 				  <p class="lead">一般民眾所有的最大起飛重量 250g以上無人機應使用一般民眾憑證或健保卡辦理線上註冊。 </p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -125,14 +125,14 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
-				   <h3>需要檢驗？</h3>
+				   <h3>街車VS仿賽</h3>？</h3>
 				   <p class="lead">最大起飛重量25kg以上具導航設備之遙控無人機，須辦理檢驗。 </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/retina.svg" alt="Generic placeholder image">
-				   <h3>需操作證？</h3>
+				   <h3>國際檔VS循環檔</h3>
 					<p class="lead">操作重量2公斤以下(航模15公斤)之遙控無人機不需持有操作證。 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
