--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>檔車類型與規定</h2>
-				<p class="lead" style="margin-top:0">一般民眾常見問題</p>
+				<p class="lead" style="margin-top:0">基本小知識</p>
 				
 			</div>
 			
