--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
 				  <h3>牌照區別？</h3>
-				  <p class="lead">一般民眾所有的最大起飛重量 250g以上無人機應使用一般民眾憑證或健保卡辦理線上註冊。 </p>
+				  <p class="lead">白牌：50cc-250cc 黃牌：250cc-550cc 紅牌：550cc 以上
+					  紅黃牌皆須滿20歲以上，並另報考駕照考試。</p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
