--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
 				  <h3>牌照區別？</h3>
-				  <p class="lead">白牌：50cc-250cc 黃牌：250cc-550cc 紅牌：550cc 以上
+				  <p class="lead">白牌：50cc-250cc  黃牌：250cc-550cc  紅牌：550cc 以上
 					  紅黃牌皆須滿20歲以上，並另報考駕照考試。</p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -127,7 +127,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
 				   <h3>街車VS仿賽</h3>？</h3>
-				   <p class="lead">最大起飛重量25kg以上具導航設備之遙控無人機，須辦理檢驗。 </p>
+				   <p class="lead"> </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
