--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
-				   <h3>街車VS仿賽</h3>？</h3>
+				   <h3>街車VS仿賽</h3>嗨</h3>
 				   <p class="lead"> </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
