--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" alt="Generic placeholder image">
-				   <h3>街車？仿賽？</h3>仿賽是類似賽車的車種，是為了追求性能及操控而生。街車是以方便在街道上騎行而設計的車型。</h3>
+				   <h3>街車？仿賽？</h3>仿賽類似於賽車，是為了追求性能及操控而生。街車是以方便在街道上騎行而設計的車型。</h3>
 				   <p class="lead"> </p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
