--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			<div class="row">
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
-				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
+				  <img class="rotate" src="img/icon/tweet.svg" width="117" height="104" alt="Generic placeholder image">
 				  <h3>牌照區別</h3>
 				  <p class="lead">白牌：50cc-250cc黃牌：250cc-550cc紅牌：550cc以上。紅黃牌皆須滿20歲以上，並另報考駕照考試。</p>
 
