--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" width="117" height="104" alt="Generic placeholder image">
-				   <h3>街車仿賽差別</h3>仿賽類似於賽車，是為了追求性能及操控而生。街車是以方便在街道上騎行而設計的車型。</h3>
-				   <p class="lead"> </p>
+				   <h3>街車仿賽差別</h3>
+				   <p class="lead"> 仿賽類似於賽車，是為了追求性能及操控而生。街車是以方便在街道上騎行而設計的車型。</p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
