--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/retina.svg" alt="Generic placeholder image">
 				   <h3>國際檔VS循環檔</h3>
-					<p class="lead">操作重量2公斤以下(航模15公斤)之遙控無人機不需持有操作證。 </p>
+					<p class="lead">國際檔檔位是1N2345，不可循環。循環檔檔位是N12345N12345，可以一直循環。 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
