--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="col-sm-4  wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/laptop.svg" alt="Generic placeholder image">
 				  <h3>常見車種</h3>
-				  <p class="lead">國際檔：循環檔： </p>
+				  <p class="lead">國際檔：小阿魯、MSX、my150。 循環檔：野狼傳奇、愛將150、GS-125R。 </p>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
