--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/map.svg" alt="Generic placeholder image">
-				   <h3>道路限制</h3>
-				   <p class="lead">一般民眾以休閒娛樂飛行為主，應在綠區飛行並遵守操作限制以降低相關風險。 </p>
+				   <h3>道路規範</h3>
+				   <p class="lead">排氣量超過250cc以上的大型重型機車的路權比照小型汽車的行駛規定，可行駛在一般道路的快車道及快速公路。</p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
