--- a/index.html
+++ b/index.html
@@ -157,9 +157,8 @@
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/browser.svg" alt="Generic placeholder image">
-				   <h3>檔車保險</h3>
-				 <p class="lead">相關風險應以自我管理為主，故不強制投保責任保險，惟基於自身及他人風險考量，建議操作人主動投保。 
-				 </p>
+				   <h3>檔車強制險？</h3>
+				 <p class="lead">並無特殊保險，和一般機車相同，皆需投保機車強制險。</p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
