--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<ul class="nav navbar-nav">
 					
 					<li class="menuItem"><a href="#whatis">檔車類型與規定</a></li>
-					<li class="menuItem"><a href="#useit">學科考試</a></li>
+					<li class="menuItem"><a href="#useit">打擋方式</a></li>
 					<li class="menuItem"><a href="#screen">術科考試</a></li>
 					<li class="menuItem"><a href="#credits">考場資訊</a></li>
 					<li class="menuItem"><a href="#contact">聯絡資訊</a></li>
@@ -178,7 +178,7 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">學科考試</h3>
+                    <h3 class="section-heading">打檔方式</h3>
 					<div class="sub-title lead3">民航法、管理規則</div>
                     <p class="lead">
 						無人機應註冊(具有射頻識別);操作人員應持有操作證。無人 機之設計、製造、改裝應申請檢驗。認可外國人持有外國政府 之證明文件。
