--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
                     <h3 class="section-heading">打檔方式</h3>
-					<div class="sub-title lead3">民航法、管理規則</div>
+					<div class="sub-title lead3">國際檔、循環檔</div>
                     <p class="lead">
 						無人機應註冊(具有射頻識別);操作人員應持有操作證。無人 機之設計、製造、改裝應申請檢驗。認可外國人持有外國政府 之證明文件。
 					</p>
