--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <h3 class="section-heading">打檔方式</h3>
 					<div class="sub-title lead3">國際檔、循環檔</div>
                     <p class="lead">
-						無人機應註冊(具有射頻識別);操作人員應持有操作證。無人 機之設計、製造、改裝應申請檢驗。認可外國人持有外國政府 之證明文件。
+						國際檔的打檔方式進檔用勾，降檔用踩。 循環檔進擋踩前，降檔踩後。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
