--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="col-sm-4  wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/laptop.svg" alt="Generic placeholder image">
 				  <h3>常見車種</h3>
-				  <p class="lead">國際檔：小阿魯、MSX、my150。 循環檔：野狼傳奇、愛將150、GS-125R。 </p>
+				  <p class="lead">國際檔：小阿魯、MSX、my150。<br> 循環檔：野狼傳奇、愛將150、GS-125R。 </p>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
@@ -217,7 +217,7 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Drag Gallery</h3>
+                    <h3 class="section-heading">車種介紹</h3>
 					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
                     <p class="lead">
 						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
