--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" width="117" height="104" alt="Generic placeholder image">
 				  <h3>牌照區別</h3>
-				  <p class="lead">白牌：50cc-250cc黃牌：250cc-550cc紅牌：550cc以上。紅黃牌皆須滿20歲以上，並另報考駕照考試。</p>
+				  <p class="lead">白牌：50cc-250cc黃牌：250cc-550cc紅牌：550cc以上。<br> 紅黃牌皆須滿20歲以上，並另報考駕照考試。</p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
@@ -126,14 +126,14 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/picture.svg" width="117" height="104" alt="Generic placeholder image">
 				   <h3>街車仿賽差別</h3>
-				   <p class="lead"> 仿賽類似於賽車，是為了追求性能及操控而生。街車是以方便在街道上騎行而設計的車型。</p>
+				   <p class="lead"> 仿賽類似於賽車，是為了追求性能及操控而生。<br> 街車是以方便在街道上騎行而設計的車型。</p>
 				   <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/retina.svg" alt="Generic placeholder image">
 				   <h3>國際檔VS循環檔</h3>
-					<p class="lead">國際檔檔位是1N2345，不可循環。循環檔檔位是N12345，可以一直循環。 </p>
+					<p class="lead">國際檔檔位是1N2345，不可循環。<br> 循環檔檔位是N12345，可以一直循環。 </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
