--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">車種介紹</h3>
+                    <h3 class="section-heading">台灣常見車種</h3>
 					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
                     <p class="lead">
 						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
