--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<li class="menuItem"><a href="#whatis">檔車類型與規定</a></li>
 					<li class="menuItem"><a href="#useit">打擋方式</a></li>
 					<li class="menuItem"><a href="#screen">術科考試</a></li>
-					<li class="menuItem"><a href="#credits">考場資訊</a></li>
+					<li class="menuItem"><a href="#credits">跑山地點</a></li>
 					<li class="menuItem"><a href="#contact">聯絡資訊</a></li>
 				</ul>
 			</div>
