--- a/index.html
+++ b/index.html
@@ -200,17 +200,17 @@
                      <div id="owl-demo-1" class="owl-carousel">
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/drone1.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone1.png" width="640" height="640" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/drone2.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone2.png" width="640" height="640"alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/drone3.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/drone3.png"width="640" height="640" alt="">
 							</div>
 						</a>
 					</div>       
