--- a/index.html
+++ b/index.html
@@ -218,12 +218,9 @@
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
                     <h3 class="section-heading">台灣常見車種</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+					<div class="sub-title lead3"></div>
                     <p class="lead">
-						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
-						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
-						uam non erat mirum sapientiae lorem cupido
-						patria esse cariorem. Quae qui non vident, nihilamane umquam magnum ac cognitione.
+						((一)SUZUKI GSX-150<br>(二)YAMAHA R15<br>(三)野狼傳奇)
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
