--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <h3 class="section-heading">打檔方式</h3>
 					<div class="sub-title lead3">國際檔、循環檔</div>
                     <p class="lead">
-						國際檔的打檔方式進檔用勾，降檔用踩。 循環檔進擋踩前，降檔踩後。
+						國際檔的打檔方式進檔用勾，降檔用踩。<br>循環檔進擋踩前，降檔踩後。
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
@@ -220,7 +220,7 @@
                     <h3 class="section-heading">台灣常見車種</h3>
 					<div class="sub-title lead3"></div>
                     <p class="lead">
-						((一)SUZUKI GSX-150<br>(二)YAMAHA R15<br>(三)野狼傳奇)
+						(一)SUZUKI GSX-150<br>(二)YAMAHA R15<br>(三)野狼傳奇
 					</p>
 
 					 <p><a class="btn btn-embossed btn-primary" href="#" role="button">View Details</a> 
@@ -315,8 +315,8 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>Get Live Updates</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>跑山地點</h2>
+				<p class="lead" style="margin-top:0">要注意安全！</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
