--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 			<div class="row">
 			
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Credits</h2>
+				<h2>跑山地點</h2>
 				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
 			 </div>
 			 
