--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6 col-md-offset-3 text-center white">
-				<h2>跑山地點</h2>
-				<p class="lead" style="margin-top:0">要注意安全！</p>
+				<h2>Get Live Updates</h2>
+				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
 			 </div>
 			<div class="col-md-6 col-md-offset-3 text-center">
 				<div class="mockup-content">
@@ -347,7 +347,7 @@
 			
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>跑山地點</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<p class="lead" style="margin-top:0">要注意安全！</p>
 			 </div>
 			 
 				<div class="col-sm-6  block wow bounceIn">
