--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
 							<i class="fa fa-desktop fa-4x "> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Bootstrap </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 北部 </h3>
+							<p> 陽金公路 • 北海岸、擎天崗</p>
 						</div>
 				  </div>
 			  </div>
@@ -367,8 +367,8 @@
 						<i class="fa fa-picture-o fa-4x "> </i> 
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Owl-Carousel </h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p> 
+						<h3> 中部 </h3>
+						<p> 148、台21、139</p> 
 					  </div>
 					</div>
 			  </div>
@@ -381,8 +381,8 @@
 							<i class="fa fa-magic fa-4x "> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Codrops </h3>
-							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
+							<h3> 南部 </h3>
+							<p> 台24線 • 屏東霧台、神山 </p>
 						</div>
 				  </div>
 			  </div>
@@ -392,7 +392,7 @@
 						<i class="fa fa-heart fa-4x "> </i> 
 					  </div>
 					  <div class="col-md-8 box-ct">
-						<h3> Lorem Ipsum</h3>
+						<h3> 東部</h3>
 						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p> 
 					  </div>
 					</div>
