--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					
 					<li class="menuItem"><a href="#whatis">檔車類型與規定</a></li>
 					<li class="menuItem"><a href="#useit">打擋方式</a></li>
-					<li class="menuItem"><a href="#screen">術科考試</a></li>
+					<li class="menuItem"><a href="#screen">YOUTUBE頻道</a></li>
 					<li class="menuItem"><a href="#credits">跑山地點</a></li>
 					<li class="menuItem"><a href="#contact">聯絡資訊</a></li>
 				</ul>
@@ -262,8 +262,8 @@
         <div class="container">
           <div class="row" >
 			 <div class="col-md-6 col-md-offset-3 text-center wrap_title ">
-				<h2>Screen App</h2>
-				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
+				<h2>YOUTUBE頻道</h2>
+				<p class="lead" style="margin-top:0">讚讚的頻道們！</p>
 			 </div>
 		  </div>
 		    <div class="row wow bounceInUp" >
