--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 					  </div>
 					  <div class="col-md-8 box-ct">
 						<h3> 東部</h3>
-						<p> Nullam mo  arcu ac molestie scelerisqu vulputate, molestie ligula gravida, tempus ipsum.</p> 
+						<p> 玉長公路、花64、11甲</p> 
 					  </div>
 					</div>
 			  </div>
