--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<ul class="nav navbar-nav">
 					
 					<li class="menuItem"><a href="#whatis">檔車類型與規定</a></li>
-					<li class="menuItem"><a href="#useit">打擋方式</a></li>
+					<li class="menuItem"><a href="#useit">打檔方式</a></li>
 					<li class="menuItem"><a href="#screen">YOUTUBE頻道</a></li>
 					<li class="menuItem"><a href="#credits">跑山地點</a></li>
 					<li class="menuItem"><a href="#contact">聯絡資訊</a></li>
@@ -407,7 +407,7 @@
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
 				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
+				<p class="lead" style="margin-top:0">其實沒有東西</p>
 				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p> 
 			 </div>
 			</div>
