--- a/index.html
+++ b/index.html
@@ -241,17 +241,10 @@
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Font Awesome & Glyphicon</h3>
-                    <p class="lead">A special thanks to Death to the Stock Photo for 
-					providing the photographs that you see in this template. 
+                    <h3 class="section-heading">重機道路規則</h3>
+                    <p class="lead">大型重型機車在劃有快慢車道分隔線之道路行駛，除起駛、準備轉彎、準備停車或臨時停車，不得行駛慢車道。但設有快慢車道分隔島之道路不在此限。
 					</p>
 					
-					<ul class="descp lead2">
-						<li><i class="glyphicon glyphicon-signal"></i> Reliable and Secure Platform</li>
-						<li><i class="glyphicon glyphicon-refresh"></i> Everything is perfectly orgainized for future</li>
-						<li><i class="glyphicon glyphicon-headphones"></i> Attach large file easily</li>
-					</ul>
-				</div>           
             </div>
         </div>
 
